fix(css): use contrasting color for blockquote paragraph

--- a/src/_includes/index.css
+++ b/src/_includes/index.css
@@ -314,8 +314,9 @@ blockquote {
 }
 
 blockquote p {
-	line-height: var(--app-line-height);
+	color: var(--app-color-contrast);
 	font-family: "Times New Roman", sans-serif;
+	line-height: var(--app-line-height);
 	margin: 0;
 }
 
